---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/adt_option_and.hvm
---
Lazy mode:
λa λb match a { Some: match b { Some: (Some (a.val, b.val)); None: None }; None: None }

Strict mode:
λa match a { Some: λc (match c { Some: λe (Some (e, c.val)); None: λ* None } a.val); None: λ* None }
